; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_ll_temac_main.c_temac_iow.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_ll_temac_main.c_temac_iow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.temac_local = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @temac_iow(%struct.temac_local* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.temac_local*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.temac_local* %0, %struct.temac_local** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.temac_local*, %struct.temac_local** %4, align 8
  %8 = getelementptr inbounds %struct.temac_local, %struct.temac_local* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i32, i32* %5, align 4
  %11 = sext i32 %10 to i64
  %12 = add nsw i64 %9, %11
  %13 = inttoptr i64 %12 to i32*
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @out_be32(i32* %13, i32 %14)
  ret void
}

declare dso_local i32 @out_be32(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
